--- a/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
+++ b/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
@@ -633,7 +633,7 @@
    "id": "db8b6eae-2103-40b2-9da3-8526d5c8b7a1",
    "metadata": {},
    "source": [
-    "#### Fetch Query Parameters from OpenAI"
+    "#### Fetch Query Parameters from OpenAI\n"
    ]
   },
   {
