--- a/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
+++ b/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "92d5cdc4-5081-4ad5-a081-6d356d75abce",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "f4d1ad19-591b-403f-97e6-43341bb693de",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "97535e51-3a33-4645-a143-9c7488fac50f",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "838f7339-20c9-4f01-9998-e1668bb2f2a2",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "1ff2983e-1226-42b7-af2e-a59f016f8430",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 22,
    "id": "54097ea7-0b94-44e3-8361-198ab6172204",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 23,
    "id": "a8b2fde9-2f09-4e3f-95f4-8113646bf35f",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "id": "2b6ab0b2-6a58-47de-8423-ec807aed0f16",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 25,
    "id": "5d6a122f-1c9a-4e91-af1d-258e1a807059",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 26,
    "id": "a51abc3a-737d-4839-8744-d37185ac87ac",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 27,
    "id": "0868ff90-e48c-4f20-a15f-10c711e30344",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
      "output_type": "stream",
      "text": [
       "['Black and Golden printed straight kurta, has a round neck, three-quarter sleeves, straight hem, and side slits80% Viscose Rayon and 20% polyester<br>Hand-washThe model (height 5\\'8\") is wearing a size S', 'Off-White and Charcoal grey striped straight kurta with printed detail, has a round neck, sleeveless, straight hem, and side slitsThe model (height 5\\'8\") is wearing a size SMaterial: Cotton<br>  Hand Wash']\n",
-      "[{'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Viscose Rayon', 'Fabric 2': 'Polyester', 'Fabric Purity': 'Synthetic', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Number of Pockets': 'NA', 'Occasion': 'Festive', 'Ornamentation': 'Sequins', 'Pattern': 'Printed', 'Print or Pattern Type': 'Ethnic Motifs', 'Shape': 'Straight', 'Sleeve Length': 'Three-Quarter Sleeves', 'Sleeve Styling': 'Regular Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave', 'Wedding': 'Guests & Gifting'}, {'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Cotton', 'Fabric 2': 'NA', 'Fabric Purity': 'Pure', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Occasion': 'Daily', 'Ornamentation': 'NA', 'Pattern': 'Striped', 'Print or Pattern Type': 'Striped', 'Shape': 'Straight', 'Sleeve Length': 'Sleeveless', 'Sleeve Styling': 'No Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave'}]\n"
+      "[{'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Viscose Rayon', 'Fabric 2': 'Polyester', 'Fabric Purity': 'Synthetic', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Number of Pockets': 'NA', 'Occasion': 'Festive', 'Ornamentation': 'Sequins', 'Pattern': 'Printed', 'Print or Pattern Type': 'Ethnic Motifs', 'Shape': 'Straight', 'Sleeve Length': 'Three-Quarter Sleeves', 'Sleeve Styling': 'Regular Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave', 'Wedding': 'Guests & Gifting', 'avg_rating': 4.15498155, 'brand': 'w', 'color': 'black', 'price': 1899, 'ratingCount': 271}, {'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Cotton', 'Fabric 2': 'NA', 'Fabric Purity': 'Pure', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Occasion': 'Daily', 'Ornamentation': 'NA', 'Pattern': 'Striped', 'Print or Pattern Type': 'Striped', 'Shape': 'Straight', 'Sleeve Length': 'Sleeveless', 'Sleeve Styling': 'No Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave', 'avg_rating': 3.402777778, 'brand': 'biba', 'color': 'off white', 'price': 999, 'ratingCount': 72}]\n"
      ]
     }
    ],
@@ -638,45 +638,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 38,
    "id": "13b206c5-2738-4a69-b02f-2d1c6fb63d45",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ResponseFormat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[226], line 31\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;66;03m# Example user query\u001b[39;00m\n\u001b[0;32m     30\u001b[0m user_query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mShow me red items under $15 with a rating above 4.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 31\u001b[0m where_clause \u001b[38;5;241m=\u001b[39m parse_query_to_where_clause(user_query)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28mprint\u001b[39m(where_clause)\n",
-      "Cell \u001b[1;32mIn[226], line 21\u001b[0m, in \u001b[0;36mparse_query_to_where_clause\u001b[1;34m(user_query)\u001b[0m\n\u001b[0;32m      2\u001b[0m     prompt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124mYou are a helpful assistant that converts user queries into filters for a product database.\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124mGiven the following user query, extract the conditions and format them as a JSON object for use as a \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhere\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m clause in ChromaDB.\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124mNone of the parameters are mandatory. If you cannot find a value then don\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt include the attribute in the response.\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;66;03m# Make the API call\u001b[39;00m\n\u001b[0;32m     19\u001b[0m     response \u001b[38;5;241m=\u001b[39m openai\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[0;32m     20\u001b[0m         model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o-mini\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m---> 21\u001b[0m         response_format\u001b[38;5;241m=\u001b[39mResponseFormat(\u001b[38;5;28mtype\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjson_object\u001b[39m\u001b[38;5;124m\"\u001b[39m),\n\u001b[0;32m     22\u001b[0m         messages\u001b[38;5;241m=\u001b[39m[{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msystem\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou are a helpful assistant.\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[0;32m     23\u001b[0m                   {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: prompt}]\n\u001b[0;32m     24\u001b[0m     )\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;66;03m# Extract and return the response\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ResponseFormat' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"color\": \"red\",\n",
+      "  \"price\": {\n",
+      "    \"$lt\": 15\n",
+      "  },\n",
+      "  \"rating\": {\n",
+      "    \"$gt\": 4\n",
+      "  }\n",
+      "}\n"
      ]
     }
    ],
    "source": [
     "def parse_query_to_where_clause(user_query):\n",
-    "    prompt = \"\"\"\n",
+    "    prompt = f\"\"\"\n",
     "You are a helpful assistant that converts user queries into filters for a product database.\n",
     "Given the following user query, extract the conditions and format them as a JSON object for use as a \"where\" clause in ChromaDB.\n",
     "\n",
     "The metadata fields are:\n",
     "- color: string (e.g., \"red\", \"blue\")\n",
-    "- price: float (e.g., {\"$lt\": 15} for \"under $15\")\n",
+    "- price: float (e.g., {{\"$lt\": 15}} for \"under $15\")\n",
     "- brand: string (e.g., \"BrandA\")\n",
-    "- rating: float (e.g., {\"$gt\": 4} for \"above 4 stars\")\n",
+    "- rating: float (e.g., {{\"$gt\": 4}} for \"above 4 stars\")\n",
     "\n",
-    "User Query: Show me olive trousers under $20 with a rating above 3.5.\n",
+    "User Query: {user_query}\n",
     "\n",
-    "Strictly return a string in JSON format only\n",
+    "Strictly return the \"content\" as a JSON string without the special characters as prefix and suffix.\n",
     "None of the parameters are mandatory. If you cannot find a value then don't include the attribute in the response.\n",
     "\"\"\"\n",
     "\n",
     "    # Make the API call\n",
     "    response = openai.chat.completions.create(\n",
     "        model=\"gpt-4o-mini\",\n",
-    "        response_format=ResponseFormat(type=\"json_object\"),\n",
     "        messages=[{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
     "                  {\"role\": \"user\", \"content\": prompt}]\n",
     "    )\n",
@@ -689,29 +691,6 @@
     "where_clause = parse_query_to_where_clause(user_query)\n",
     "print(where_clause)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
-   "id": "e5d5af8e-0d5b-42cb-a771-e687c9fc34b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[216], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m json\u001b[38;5;241m.\u001b[39mloads(where_clause)\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _default_decoder\u001b[38;5;241m.\u001b[39mdecode(s)\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[0;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_decode(s, idx\u001b[38;5;241m=\u001b[39m_w(s, \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mend())\n\u001b[0;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[0;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
-      "File \u001b[1;32mC:\\ProgramData\\anaconda3\\Lib\\json\\decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscan_once(s, idx)\n\u001b[0;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m--> 355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    356\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
-      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
