--- a/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
+++ b/Fashion-Search-AI-v2_Alok-Aparanji.ipynb
@@ -480,7 +480,7 @@
     "filepath = \"../\"\n",
     "\n",
     "with open(filepath + \"OPENAI_API_Key.txt\", \"r\") as f:\n",
-    "  openai.api_key = ' '.join(f.readlines())"
+    "  openai.api_key = ''.join(f.readlines())"
    ]
   },
   {
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "documents_list = data[\"description\"].tolist()\n",
+    "documents_list = data[\"description\"].apply(lambda d:d.lower()).tolist()\n",
     "ids = data['p_id'].apply(lambda id:str(id)).tolist()"
    ]
   },
@@ -577,7 +577,7 @@
     "import ast\n",
     "#metadata_list = data['p_attributes'].apply(lambda attr:ast.literal_eval(attr)).tolist()\n",
     "def combine_metadatas(row):\n",
-    "    metadata_dict = ast.literal_eval(row['p_attributes'])\n",
+    "    metadata_dict = ast.literal_eval(row['p_attributes'].lower())\n",
     "    metadata_dict.update({'color' : row['colour'].lower(), 'brand' : row['brand'].lower(), 'price' : row['price'], 'ratingCount' : row['ratingCount'], 'avg_rating' : row['avg_rating']})\n",
     "    return metadata_dict\n",
     "\n",
@@ -604,31 +604,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "0868ff90-e48c-4f20-a15f-10c711e30344",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Black and Golden printed straight kurta, has a round neck, three-quarter sleeves, straight hem, and side slits80% Viscose Rayon and 20% polyester<br>Hand-washThe model (height 5\\'8\") is wearing a size S', 'Off-White and Charcoal grey striped straight kurta with printed detail, has a round neck, sleeveless, straight hem, and side slitsThe model (height 5\\'8\") is wearing a size SMaterial: Cotton<br>  Hand Wash']\n",
-      "[{'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Viscose Rayon', 'Fabric 2': 'Polyester', 'Fabric Purity': 'Synthetic', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Number of Pockets': 'NA', 'Occasion': 'Festive', 'Ornamentation': 'Sequins', 'Pattern': 'Printed', 'Print or Pattern Type': 'Ethnic Motifs', 'Shape': 'Straight', 'Sleeve Length': 'Three-Quarter Sleeves', 'Sleeve Styling': 'Regular Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave', 'Wedding': 'Guests & Gifting', 'avg_rating': 4.15498155, 'brand': 'w', 'color': 'black', 'price': 1899, 'ratingCount': 271}, {'Body Shape ID': '424', 'Body or Garment Size': 'To-Fit Denotes Body Measurements in', 'Colour Family': 'Monochrome', 'Design Styling': 'Regular', 'Fabric': 'Cotton', 'Fabric 2': 'NA', 'Fabric Purity': 'Pure', 'Hemline': 'Straight', 'Length': 'Knee Length', 'Main Trend': 'NA', 'Neck': 'Round Neck', 'Occasion': 'Daily', 'Ornamentation': 'NA', 'Pattern': 'Striped', 'Print or Pattern Type': 'Striped', 'Shape': 'Straight', 'Sleeve Length': 'Sleeveless', 'Sleeve Styling': 'No Sleeves', 'Slit Detail': 'Side Slits', 'Stitch': 'Ready to Wear', 'Sustainable': 'Regular', 'Technique': 'NA', 'Wash Care': 'Hand Wash', 'Weave Pattern': 'Regular', 'Weave Type': 'Machine Weave', 'avg_rating': 3.402777778, 'brand': 'biba', 'color': 'off white', 'price': 999, 'ratingCount': 72}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "query='Please show me black printed kurtas'\n",
-    "query_embedding = model.encode(query)\n",
-    "results = fashion_coll.query(query_embeddings=[query_embedding], n_results=2)\n",
-    "for r in results['documents']:\n",
-    "    print(r)\n",
-    "for r in results['metadatas']:\n",
-    "    print(r)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "db8b6eae-2103-40b2-9da3-8526d5c8b7a1",
    "metadata": {},
@@ -638,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "id": "13b206c5-2738-4a69-b02f-2d1c6fb63d45",
    "metadata": {},
    "outputs": [
@@ -647,13 +622,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"color\": \"red\",\n",
-      "  \"price\": {\n",
-      "    \"$lt\": 15\n",
-      "  },\n",
-      "  \"rating\": {\n",
-      "    \"$gt\": 4\n",
-      "  }\n",
+      "  \"color\": \"black\"\n",
       "}\n"
      ]
     }
@@ -670,10 +639,12 @@
     "- brand: string (e.g., \"BrandA\")\n",
     "- rating: float (e.g., {{\"$gt\": 4}} for \"above 4 stars\")\n",
     "\n",
+    "\n",
     "User Query: {user_query}\n",
     "\n",
     "Strictly return the \"content\" as a JSON string without the special characters as prefix and suffix.\n",
-    "None of the parameters are mandatory. If you cannot find a value then don't include the attribute in the response.\n",
+    "Don't add any attributes other than \"color\", \"price\", \"brand\", \"rating\".\n",
+    "None of the attributes are mandatory. If you cannot find a value then don't include the attribute in the response.\n",
     "\"\"\"\n",
     "\n",
     "    # Make the API call\n",
@@ -687,15 +658,40 @@
     "    return response.choices[0].message.content\n",
     "\n",
     "# Example user query\n",
-    "user_query = \"Show me red items under $15 with a rating above 4.\"\n",
+    "user_query = 'Please show me black printed kurtas'\n",
     "where_clause = parse_query_to_where_clause(user_query)\n",
     "print(where_clause)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "ab50c6e5-9e82-4794-bafc-4e0b8df87aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['black and golden printed straight kurta, has a round neck, three-quarter sleeves, straight hem, and side slits80% viscose rayon and 20% polyester<br>hand-washthe model (height 5\\'8\") is wearing a size s', 'black and white printed kurta with palazzos and dupatta<br>black and white ethnic print straight calf length kurta, has a round neck, three-quarter sleeves, side slits<br>white and black printed palazzos, has elasticated waistband, slip-on closure<br>black and white printed dupatta, has printed bordertop fabric: pure cotton<br>bottom fabric: pure cotton<br>dupatta fabric: pure cotton<br>hand-washthe model (height 5\\'8\") is wearing a size s']\n",
+      "[{'avg_rating': 4.15498155, 'body or garment size': 'to-fit denotes body measurements in', 'body shape id': '424', 'brand': 'w', 'color': 'black', 'colour family': 'monochrome', 'design styling': 'regular', 'fabric': 'viscose rayon', 'fabric 2': 'polyester', 'fabric purity': 'synthetic', 'hemline': 'straight', 'length': 'knee length', 'main trend': 'na', 'neck': 'round neck', 'number of pockets': 'na', 'occasion': 'festive', 'ornamentation': 'sequins', 'pattern': 'printed', 'price': 1899, 'print or pattern type': 'ethnic motifs', 'ratingCount': 271, 'shape': 'straight', 'sleeve length': 'three-quarter sleeves', 'sleeve styling': 'regular sleeves', 'slit detail': 'side slits', 'stitch': 'ready to wear', 'sustainable': 'regular', 'technique': 'na', 'wash care': 'hand wash', 'weave pattern': 'regular', 'weave type': 'machine weave', 'wedding': 'guests & gifting'}, {'add-ons': 'na', 'avg_rating': 4.239700375, 'body or garment size': 'garment measurements in', 'body shape id': '443,333,324,424', 'bottom closure': 'slip-on', 'bottom fabric': 'pure cotton', 'bottom pattern': 'printed', 'bottom type': 'palazzos', 'brand': 'yuris', 'character': 'na', 'color': 'black', 'dupatta': 'with dupatta', 'dupatta border': 'printed', 'dupatta fabric': 'pure cotton', 'dupatta pattern': 'printed', 'main trend': 'na', 'neck': 'round neck', 'number of pockets': '1', 'occasion': 'daily', 'ornamentation': 'thread work', 'pattern coverage': 'small', 'price': 3499, 'print or pattern type': 'ethnic motifs', 'ratingCount': 267, 'sleeve length': 'three-quarter sleeves', 'sleeve styling': 'regular sleeves', 'slit detail': 'side slits', 'stitch': 'ready to wear', 'sustainable': 'regular', 'technique': 'block print', 'top design styling': 'regular', 'top fabric': 'pure cotton', 'top hemline': 'straight', 'top length': 'calf length', 'top pattern': 'printed', 'top shape': 'straight', 'top type': 'kurta', 'waistband': 'elasticated', 'wash care': 'hand wash', 'weave pattern': 'regular', 'weave type': 'machine weave'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query='Please show me black printed kurtas'\n",
+    "query_embedding = model.encode(query.lower())\n",
+    "results = fashion_coll.query(query_embeddings=[query_embedding], n_results=2, where=json.loads(where_clause))\n",
+    "for r in results['documents']:\n",
+    "    print(r)\n",
+    "for r in results['metadatas']:\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbf38982-4eef-45a2-84f2-e32a719def72",
    "metadata": {},
    "outputs": [],
    "source": []
